/chat: slight size tweak to try to avoid message truncation in zoom mode. When switching views, ensure that any zoomed widget is moved back where it needs to be so that, e.g. visiting the config view while zooming does not cause the message to locally disappear.
FossilOrigin-Name: 5d71561e2052e7a5023801b348f323c42793cd2ac45b0d17f7cac25275dd9c87

--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -486,7 +486,7 @@ body.chat #chat-zoom-content > .message-widget {
   flex-grow: 1;
 }
 body.chat #chat-zoom-content > .message-widget > .message-widget-content {
-  width: 100%;
+  width: 99%;
 }
 body.chat #chat-zoom-content > .message-widget .toolbar.hide-in-zoom {
   /* The various Delete buttons misinteract with zoom mode's moving-around
